--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-   "author": "Evil Window Dog",
+   "author": "Stelios Petrakis",
    "background": {
       "persistent": true,
       "scripts": [ "js/events.js" ]
@@ -20,7 +20,7 @@
   },
    "options_page": "html/options.html",
    "description": "BeamTab extension for Google Chrome",
-   "homepage_url": "http://evilwindowdog.com",
+   "homepage_url": "http://stelabouras.com",
    "icons": {
       "256": "icons/icon-256.png"
    },
@@ -34,5 +34,5 @@
       "js": ["js/extractor.js"],
       "css": ["css/extractor.css"]
     }],
-   "version": "0.1"
+   "version": "1.0"
 }
