--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     }
   },
    "options_page": "html/options.html",
-   "description": "BeamTab extension for Google Chrome",
+   "description": "Beam your current tab to your other Chrome browsers.",
    "homepage_url": "http://stelabouras.com",
    "icons": {
       "256": "icons/icon-256.png"
@@ -34,5 +34,5 @@
       "js": ["js/extractor.js"],
       "css": ["css/extractor.css"]
     }],
-   "version": "1.0"
+   "version": "0.2"
 }
